Google Authentification  + navigation fixes and userSession fixes
google auth + fixed navigation issues because of splash screen logic  + fixed profile menu button showing everywhere

--- a/songHaven-IOS/songHaven-IOS/Info.plist
+++ b/songHaven-IOS/songHaven-IOS/Info.plist
@@ -2,6 +2,25 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string></string>
+			<key>CFBundleURLName</key>
+			<string>717300153408-gealid8op270o73bf51u2kvi7gg2kiq2.apps.googleusercontent.com</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.717300153408-gealid8op270o73bf51u2kvi7gg2kiq2</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+		</dict>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
