--- a/songHaven-IOS/songHaven-IOS/Info.plist
+++ b/songHaven-IOS/songHaven-IOS/Info.plist
@@ -21,6 +21,13 @@
 			<string>Editor</string>
 		</dict>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<false/>
+	</dict>
+	<key>UIApplicationSupportsPrintCommand</key>
+	<false/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
